# colomin

./: .gitignore  AGENTS.md  Cargo.toml  Info.plist  README.md
assets/: Colomin.icns
docs/: CNAME  COMMERCIAL.md  TRADEMARK_POLICY.md  index.html
scripts/: bundle.sh  deploy-docs.sh
site/: index.html
src/: app.rs  apple_events.rs  debug_log.rs  file_open.rs  main.rs
src/csv_engine/: mod.rs  parser.rs  query.rs  types.rs  writer.rs
src/state/: app_state.rs  mod.rs  types.rs
src/ui/: icons.rs  mod.rs  stats.rs  status_bar.rs  table.rs  theme.rs
src/ui/table/: body.rs  cache.rs  clipboard.rs  editing.rs  file_commands.rs  hit_test.rs  navigation.rs  render_header.rs  render_row.rs  row_interaction.rs  scroll.rs  sorting.rs  stats.rs  undo_redo.rs  views.rs
themes/: colomin-dark.tokens.json  colomin-light.tokens.json  github-dark.tokens.json  github-light.tokens.json  github.json  macos-classic.json
