[package]
name = "colomin"
version = "0.1.0"
edition = "2021"
description = "A native CSV editor built with GPUI"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
gpui_platform = { git = "https://github.com/zed-industries/zed", branch = "main", features = ["font-kit"] }
anyhow = "1"
csv = "1.3"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
