[package]
name = "colomin"
version = "0.1.0"
edition = "2021"
description = "A native CSV editor built with egui"

[dependencies]
eframe = { version = "0.31", features = [] }
egui = { version = "0.31", features = [] }
egui_extras = { version = "0.31", features = ["svg"] }
anyhow = "1"
csv = "1.3"
fontdb = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSResponder"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSArray", "NSString", "NSURL"] }

[profile.dev]
opt-level = 1

[package.metadata.bundle]
name = "Colomin"
identifier = "com.colomin.app"
version = "0.1.0"
copyright = "Copyright © 2025 Colomin"
category = "public.app-category.productivity"
short_description = "A native CSV editor"
icon = ["assets/Colomin.icns"]
osx_minimum_system_version = "12.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
